###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

###############################################################################
## MODULE.bazel
###############################################################################
module(
    name = "cuda_tutorials",
    version = "0.0.1",
    compatibility_level = 1,
)

###############################################################################
## Add rules_cuda dependency
###############################################################################
bazel_dep(name = "rules_cuda", version = "0.2.5")

# pick v0.2.5 version (latest as of 09/2025)
archive_override(
    module_name = "rules_cuda",
    # base64-encoded SHA-512 checksum of the file
    # generated via: openssl dgst -sha512 -binary rules_cuda-v0.2.5.tar.gz | openssl base64 -A
    integrity = "sha512-sah/nWM3BYhRZ88IKqx2+cwd+ONGYOai15EPRPczpgrmjeY4TjhykyvxcNnFCNlgFqqpyg+0xuU/txAnvje7Yg==",
    urls = ["https://github.com/bazel-contrib/rules_cuda/releases/download/v0.2.5/rules_cuda-v0.2.5.tar.gz"],
    strip_prefix = "rules_cuda-v0.2.5",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "/etc/alternatives/cuda/",
)
use_repo(cuda, "local_cuda")

###############################################################################
## Add other dependencies here
###############################################################################

# Add opencv dependency
# https://github.com/bazelbuild/bazel-central-registry/blob/main/modules/opencv/README.md
bazel_dep(name = "opencv", version = "4.11.0.bcr.2")

# Add google benchmark dependency
bazel_dep(name = "google_benchmark", version = "1.9.4")